# Spread

./: CMakeLists.txt  main.cpp
ffmpeg-mac/lib/: libavdevice.58.9.103.dylib
ffmpeg-mac/lib/pkgconfig/: libavdevice.pc
lib/FFmpeg/: CMakeLists.txt
lib/FFmpeg/ffmpeg-mac/lib/: libavdevice.58.9.103.dylib  libavformat.58.42.100.dylib  libavutil.56.42.102.dylib
lib/FFmpeg/ffmpeg-mac/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc
lib/FFmpeg/ffmpeg-mac/share/doc/ffmpeg/: ffmpeg-filters.html  ffmpeg.html  ffprobe-all.html  general.html  libavdevice.html  libavfilter.html  libavformat.html  libavutil.html  mailing-list-faq.html  nut.html  platform.html
lib/FFmpeg/ffmpeg-mac/share/man/man1/: ffmpeg-all.1  ffplay-all.1
lib/ffmpeg/ffmpeg-mac/lib/: libpostproc.55.6.100.dylib  libswscale.5.6.101.dylib
lib/ffmpeg/ffmpeg-mac/share/doc/ffmpeg/: fate.html  ffmpeg-devices.html  ffmpeg-formats.html  ffmpeg-scaler.html  ffplay-all.html  ffprobe.html  git-howto.html  libswscale.html
lib/ffmpeg/ffmpeg-mac/share/man/man1/: ffmpeg-codecs.1  ffmpeg-filters.1
lib/ffmpeg2/ffmpeg-mac/include/libavutil/: ffversion.h
lib/ffmpeg2/ffmpeg-mac/lib/: libavcodec.dylib  libswresample.3.6.100.dylib
lib/ffmpeg2/ffmpeg-mac/lib/pkgconfig/: libavcodec.pc
lib/ffmpeg2/ffmpeg-mac/share/doc/ffmpeg/: developer.html  faq.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-utils.html  ffplay.html  libavcodec.html  libswresample.html
lib/ffmpeg2/ffmpeg-mac/share/man/man1/: ffmpeg-formats.1  ffprobe-all.1
src/: loadFrame.cpp  main.cpp
src/spread-ffmpeg/: framedata.cpp  framedata.h  hwaccelsdecoder.cpp  hwaccelsdecoder.h  loadframe.cpp  loadframe.h  remuxer.cpp  remuxer.h  videoreader.cpp  videoreader.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  playvideodialog.cpp  playvideodialog.h  playvideodialog.ui  videoplayerwidget.cpp  videoplayerwidget.h
